@@ -1,7 +1,15 @@
 2004-10-19 Scott Dattalo <scott@dattalo.com>
+	* src/stimuli.h, src/stimuli.cc, src/ioports.cc, src/i2c-ee.cc:
+	Optimized I/O port stimulus updates.
+
+2004-10-19 Scott Dattalo <scott@dattalo.com>
 	* src/stimuli.h, src/stimuli.cc: Began adding capitance modelling
 	to stimuli.
 
+2004-10-18 Scott Dattalo <scott@dattalo.com>
+	* src/gpsim_classes.h, src/registers.h: Added EXTERNAL_RESET and
+	BOD_RESET types.
+	
 2004-10-17 Borut Razem <borut.razem@siol.net>
 	* plat/win32/gpsim.def: MSVC sync
 	* src/symbol.cc: fixed gpsim crash on WIN32 in remove_module()
